--- a/DC_Server/static/css/style.css
+++ b/DC_Server/static/css/style.css
@@ -1,24 +1,30 @@
-* {
+/** {
     margin: 0;
     padding: 0;
-}
+}*/
 
 .container {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    padding-left: 20px;
+    padding-right: 20px;
     /* background-color: black; */
+}
+
+.container-fluid {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .head {
     display: flex;
-    min-height: 20px;
-    background-color: cornflowerblue;
-    padding-top:8px;
-    padding-left:8px;
-    padding-bottom:8px;
+    min-height: 15px;
+    background-color: #87CEEB;
+    padding-top:5px;
+    padding-bottom:5px;
     font-weight:900;
-    font-size: 120%;
+    font-size: 110%;
 }
 
 .main {
@@ -26,6 +32,8 @@
     flex: 1;
     flex-direction: row;
     min-height: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
     /* background-color: cyan; */
 }
 
@@ -118,6 +126,7 @@
 
 .clm3 select {
     /* display: inline-block; */
+    width: 300px;
     min-width: 280px;
     min-height: 25px;
 }
@@ -201,6 +210,14 @@ body {font-family: Arial;}
     display: none;
 }
 
+tr {
+    height: 10px;
+}
+
+td {
+    font-size: 5px;
+    height: 10px;
+}
 
 
 /* Create an active/current tablink class */
