--- a/DC_Server/templates/index.html
+++ b/DC_Server/templates/index.html
@@ -88,7 +88,6 @@
                                     <p style="font-size: 14px; font-weight:bold;">評価結果</p>
                                     <div id="chartLeft1" style="margin-left: -20px;"></div>
                                 </div>
-                                
                             </div>
                             <div class="row">
                                 <div class="form-group col-md-3 col-sm-3 col-xs-3" style="vertical-align: top;">
@@ -113,87 +112,12 @@
                             </div>
                         </div>
                     </form>
-                    <!-- <table>
-                        <tr class="row1">
-                            <td class="clm1"></td>
-                            <td class="clm2">
-                            <span>データセット</span>  
-                            </td>
-                            <td class="clm3"id="c2r">
-                                <span>評価条件</span>
-                                &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-                                <span>評価結果</span>
-                            </td>
-                            <td class="clm4"></td>
-                        </tr>
-                        <tr class="row2">
-                            <td class="clm1">
-                                <span>大きな環境変動</span>
-                                <div class="switch-box">
-                                    <input id="switchButton1" type="checkbox" class="switch" />
-                                    <label for="switchButton1"></label>
-                                </div>
-                            </td>
-                            <td class="clm2">
-                                
-                                <br>
-                                <input type="radio" name="" id="radio1">
-                                <span>ブラコンB期間(オフライン)</span>
-                            </td>
-                            <td class="clm3-2" id="c2r" style="padding-top:16px;">
-                                <div>
-                                    <input type="checkbox" name="" id="check11">運搬特化<br>
-                                    <input type="checkbox" name="" id="check12">バランス<br>
-                                    <input type="checkbox" name="" id="check13">電力特化
-                                </div>
-                                &nbsp; &nbsp; &nbsp; &nbsp;
-                                <div>
-                                    
-                                    <div id="chart1" class="dataGenChart">
-                                    </div>
-                                    <br><br><br>
-                                </div>
-                                
-                            </td>
-                            <td class="clm4"></td>
-                        </tr>
-                        <tr class="row3">
-                            <td class="clm1">
-                                <span>天気</span>
-                                <div class="switch-box2">
-                                    <input id="switchButton2" type="checkbox" class="switch" />
-                                    <label for="switchButton2"></label>
-                                </div>
-                            </td>
-                            <td class="clm2">
-                                <input type="radio" name="" id="radio2">
-                                <span>ブロコンB期間(オンライン)</span>
-                            </td>
-                            <td class="clm3"style="padding-top:10px;">
-                                <span>アルゴリズム</span><br>
-                                <select name="" id="select1">
-                                    <option value="">アルゴリズム1</option>
-                                </select>
-                            </td>
-                            <td class="clm4">
-                                <br><input type="button" class="btn btn-primary" value="実行"id="button1">
-                            </td>
-                        </tr>
-                        <tr class="row4">
-                            <td class="clm1"></td>
-                            <td class="clm2">
-                                <input type="radio" name="" id="radio3">
-                                <span>従来手法</span>
-                            </td>
-                            <td class="clm3"></td>
-                            <td class="clm4"></td>
-                        </tr>
-                    </table> -->
+                    
                 </div>
                 <div class="GIS" id="cesiumContainer"></div>
                 <div id="credit"></div>
             </div>
-            <div class="dashboard col-md-12 col-sm-12 col-xs-12">
+            <div class="dashboard">
                 <div class="col-md-12 col-sm-12 col-xs-12" style="display：inline-block; margin-top: 15px; margin-bottom: 20px;">
                     <span style="font-size: 20px; font-weight:bold;">
                         グラフ表示
@@ -202,19 +126,21 @@
                         <a href="#" id="graphOnOff" style="float: right">隠す</a>
                     </span>
                 </div>
-                <div id="graphGrid" class="col-md-12 col-sm-12 col-xs-12" style="margin-top: 10px;" >
-                    <div class="col-md-12 col-sm-12 col-xs-12 align-center" style="background-color:#DCDCDC; height: 35px;">
-                        <span style="font-size: 16px; font-weight:bold;padding-top: 10px;">個別のナノグリッド</span>
+                <div id="graphGrid" class="" style="margin-top: -5px;" >
+                    <div>
+                        <!-- <span style="font-size: 16px; font-weight:bold;padding-top: 10px;">個別のナノグリッド</span>
                         <ul style="float: right; list-style: none;">
                             <li><a class="collapse-link"><i class="fa fa-caret-up"></i></a></li>
-                        </ul>
+                        </ul> -->
+                        <input type="checkbox" id="label1" class="cssacc" />
+                        <label for="label1">個別のナノグリッド</label>
                     </div>
-                    <div class="content" style="margin-top: 20px;">
-                        <div class="form form-label-left col-md-12 col-sm-12 col-xs-12" >
+                    <div class="accshow col-md-12 col-sm-12 col-xs-12" >
+                        <div class="form-label-left col-md-12 col-sm-12 col-xs-12" >
                             <div><h4>電力</h4></div>
                             <div class="form-group">
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <div id="chart11"></div>
+                                    <div id="chart11" style="margin-left: -8px"></div>
                                 </div>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <div id="chart12"></div>
@@ -224,8 +150,8 @@
                             <div><h4>気象データ</h4></div>
                             <div class="form-group">
                                 <div class="col-md-4 col-sm-4 col-xs-12">
-                                    <div id="chart21">
-                                        <table class="table table-hover table-bordered" width="50px">
+                                    <div id="chart21" style="margin-left: 20px">
+                                        <table class="table-bordered" width="200px">
                                             <thead>
                                                 <tr class="tr-head">
                                                     <th scope="col" class="col-md-2 col-sm-2 col-xs-4">項目</th>
@@ -264,7 +190,7 @@
                             <div class="form-group">
                                 <div><h4>その他</h4></div>
                                 <div class="col-md-4 col-sm-4 col-xs-12">
-                                    <div id="chart31"></div>
+                                    <div id="chart31" ></div>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-12">
                                     <div id="chart32"></div>
@@ -275,7 +201,12 @@
                             </div>
                         </div>
                     </div>
+                    <div>
+                        <input type="checkbox" id="label2" class="cssacc" />
+                        <label for="label2">全ナノグリッド</label>
+                    </div>
                 </div>
+                
             </div>
         </div>
 
